# textual-plotext

./: ChangeLog.md  Makefile  README.md  pyproject.toml
example/: README.md  textual_towers_weather.py
examples/: README.md  plotext_themes.py  scatter.py  textual_towers_weather.py
src/textual_plotext/: __init__.py  __main__.py  plot.py  plotext_plot.py
src/textual_plotext/plotext/: __init__.py  __init__.pyi  _figure.py  _figure.pyi
typings/plotext/: __init__.pyi  _figure.pyi
