[tool.poetry]
name = "textual-plotext"
version = "0.0.1"
description = "A Textual widget wrapper for the Plotext plotting library"
authors = ["Dave Pearson <dave@textualize.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
plotext = "^5.2.8"
textual = "^0.37.1"

[tool.poetry.group.dev.dependencies]
textual-dev = "*"
mypy = "^1.1.1"
pylint = "^2.17.1"
pre-commit = "^2.13.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
